@@ -40,9 +40,9 @@
 
 /* 8 bits red, green and blue channel */
 #define DECLARESHIFTS int RSHIFT = (bgr) ? 0 : 16, GSHIFT = 8, BSHIFT = (bgr) ? 16 : 0
-#define GETRED(col) (((col) >> RSHIFT) & 0xFFUL)
-#define GETGREEN(col) (((col) >> GSHIFT) & 0xFFUL)
-#define GETBLUE(col) (((col) >> BSHIFT) & 0xFFUL)
+#define GETRED(col) (((col) >> RSHIFT) & 0xFFU)
+#define GETGREEN(col) (((col) >> GSHIFT) & 0xFFU)
+#define GETBLUE(col) (((col) >> BSHIFT) & 0xFFU)
 
 #include <R_ext/Error.h>
 
@@ -73,12 +73,12 @@ static void my_png_warning(png_structp png_ptr, png_const_charp msg)
 
 #define CN (100.0 / 2.54)
 
-__declspec(dllexport) int R_SaveAsPng(void *d, int width, int height, unsigned long (*gp)(void *, int, int), int bgr,
+__declspec(dllexport) int R_SaveAsPng(void *d, int width, int height, unsigned int (*gp)(void *, int, int), int bgr,
                                       FILE *fp, unsigned int transparent, int res)
 {
     png_structp png_ptr;
     png_infop info_ptr;
-    unsigned long col, palette[256];
+    unsigned int col, palette[256];
     png_color pngpalette[256];
     png_bytep pscanline, scanline = calloc(3 * width, sizeof(png_byte));
     png_byte trans[256];
@@ -136,7 +136,7 @@ __declspec(dllexport) int R_SaveAsPng(void *d, int width, int height, unsigned l
     {
         for (j = 0; (j < width) && withpalette; j++)
         {
-            col = gp(d, i, j) & 0xFFFFFFUL;
+            col = gp(d, i, j) & 0xFFFFFFU;
             /* binary search the palette: */
             low = 0;
             high = ncols - 1;
@@ -196,7 +196,7 @@ __declspec(dllexport) int R_SaveAsPng(void *d, int width, int height, unsigned l
         if (withpalette)
         {
             for (i = 0; i < ncols; i++)
-                trans[i] = (palette[i] == (transparent & 0xFFFFFFUL)) ? 0 : 255;
+                trans[i] = (palette[i] == (transparent & 0xFFFFFFU)) ? 0 : 255;
         }
         else
         {
@@ -222,7 +222,7 @@ __declspec(dllexport) int R_SaveAsPng(void *d, int width, int height, unsigned l
         pscanline = scanline;
         for (j = 0; j < width; j++)
         {
-            col = gp(d, i, j);
+            col = gp(d, i, j) & 0xFFFFFFU;
             if (withpalette)
             {
                 /* binary search the palette (the colour must be there): */
@@ -305,7 +305,7 @@ static void my_output_message(j_common_ptr cinfo)
     R_ShowMessage(buffer);
 }
 
-__declspec(dllexport) int R_SaveAsJpeg(void *d, int width, int height, unsigned long (*gp)(void *, int, int), int bgr,
+__declspec(dllexport) int R_SaveAsJpeg(void *d, int width, int height, unsigned int (*gp)(void *, int, int), int bgr,
                                        int quality, FILE *outfile, int res)
 {
     struct jpeg_compress_struct cinfo;
@@ -313,7 +313,7 @@ __declspec(dllexport) int R_SaveAsJpeg(void *d, int width, int height, unsigned 
     /* More stuff */
     JSAMPLE *pscanline, *scanline = calloc(3 * width, sizeof(JSAMPLE));
     int i, j;
-    unsigned long col;
+    unsigned int col;
     DECLARESHIFTS;
 
     /* Have we enough memory?*/
@@ -374,7 +374,7 @@ __declspec(dllexport) int R_SaveAsJpeg(void *d, int width, int height, unsigned 
         pscanline = scanline;
         for (j = 0; j < width; j++)
         {
-            col = gp(d, i, j);
+            col = gp(d, i, j) & 0xFFFFFFU;
             *pscanline++ = GETRED(col);
             *pscanline++ = GETGREEN(col);
             *pscanline++ = GETBLUE(col);
@@ -418,7 +418,7 @@ __declspec(dllexport) int R_SaveAsJpeg(void *d, int width, int height, unsigned 
 #define BMPDW(a)                                                                                                       \
     {                                                                                                                  \
         dwrd = a;                                                                                                      \
-        if (fwrite(&dwrd, sizeof(unsigned long), 1, fp) != 1)                                                          \
+        if (fwrite(&dwrd, sizeof(unsigned int), 1, fp) != 1)                                                           \
             BMPERROR                                                                                                   \
     }
 #define BMPLONG(a)                                                                                                     \
@@ -432,14 +432,14 @@ __declspec(dllexport) int R_SaveAsJpeg(void *d, int width, int height, unsigned 
         BMPERROR;
 #define HEADERSIZE 54
 
-__declspec(dllexport) int R_SaveAsBmp(void *d, int width, int height, unsigned long (*gp)(void *, int, int), int bgr,
+__declspec(dllexport) int R_SaveAsBmp(void *d, int width, int height, unsigned int (*gp)(void *, int, int), int bgr,
                                       FILE *fp, int res)
 {
-    unsigned long col, palette[256];
+    unsigned int col, palette[256];
     int i, j, r, ncols, mid, high, low, withpalette;
     int bfOffBits, bfSize, biBitCount, biClrUsed, pad;
     unsigned short wrd;
-    unsigned long dwrd;
+    unsigned int dwrd;
     long lng, lres;
     DECLARESHIFTS;
 
@@ -452,7 +452,7 @@ __declspec(dllexport) int R_SaveAsBmp(void *d, int width, int height, unsigned l
     {
         for (j = 0; (j < width) && withpalette; j++)
         {
-            col = gp(d, i, j) & 0xFFFFFFUL;
+            col = gp(d, i, j) & 0xFFFFFFU;
             /* binary search the palette: */
             low = 0;
             high = ncols - 1;
@@ -538,7 +538,7 @@ __declspec(dllexport) int R_SaveAsBmp(void *d, int width, int height, unsigned l
         {
             for (j = 0; j < width; j++)
             {
-                col = gp(d, i, j) & 0xFFFFFFUL;
+                col = gp(d, i, j) & 0xFFFFFFU;
                 /* binary search the palette (the colour must be there): */
                 low = 0;
                 high = ncols - 1;
@@ -568,7 +568,7 @@ __declspec(dllexport) int R_SaveAsBmp(void *d, int width, int height, unsigned l
         {
             for (j = 0; j < width; j++)
             {
-                col = gp(d, i, j) & 0xFFFFFFUL;
+                col = gp(d, i, j) & 0xFFFFFFU;
                 BMPPUTC(GETBLUE(col));
                 BMPPUTC(GETGREEN(col));
                 BMPPUTC(GETRED(col));
