@@ -1810,7 +1810,7 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
         RFontInit();
 
     /* Foreground and Background Colors */
-    xd->bg = dd->startfill = bg; /* 0xffffffff; transparent */
+    xd->bg = dd->startfill = bg;
     xd->col = dd->startcol = R_RGB(0, 0, 0);
 
     xd->fgcolor = Black;
@@ -1840,7 +1840,6 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
     {
         xd->res_dpi = (xpos == NA_INTEGER) ? 0 : xpos;
         xd->bg = dd->startfill = canvascolor;
-        /* was R_RGB(255, 255, 255); white */
         xd->kind = (dsp[0] == 'p') ? PNG : BMP;
         if (strlen(dsp + 4) >= 512)
             error(_("filename too long in %s() call"), (dsp[0] == 'p') ? "png" : "bmp");
@@ -1863,6 +1862,12 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
             warning(_("Unable to allocate bitmap"));
             return FALSE;
         }
+        xd->bm = xd->gawin;
+        if ((xd->bm2 = newbitmap(w, h, 256)) == NULL)
+        {
+            warning(_("Unable to allocate bitmap"));
+            return FALSE;
+        }
         snprintf(buf, 600, xd->filename, 1);
         if ((xd->fp = R_fopen(buf, "wb")) == NULL)
         {
@@ -1870,6 +1875,7 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
             warning(_("Unable to open file '%s' for writing"), buf);
             return FALSE;
         }
+        xd->have_alpha = TRUE;
     }
     else if (!strncmp(dsp, "jpeg:", 5))
     {
@@ -1897,6 +1903,12 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
             warning(_("Unable to allocate bitmap"));
             return FALSE;
         }
+        xd->bm = xd->gawin;
+        if ((xd->bm2 = newbitmap(w, h, 256)) == NULL)
+        {
+            warning(_("Unable to allocate bitmap"));
+            return FALSE;
+        }
         snprintf(buf, 600, xd->filename, 1);
         if ((xd->fp = R_fopen(buf, "wb")) == NULL)
         {
@@ -1904,6 +1916,7 @@ static Rboolean GA_Open(pDevDesc dd, gadesc *xd, const char *dsp, double w, doub
             warning(_("Unable to open file '%s' for writing"), buf);
             return FALSE;
         }
+        xd->have_alpha = TRUE;
     }
     else
     {
@@ -2247,7 +2260,12 @@ static void GA_NewPage(pGEcontext gc, pDevDesc dd)
             DRAW(gfillrect(_d, xd->bgcolor, xd->clip));
         }
         else if (xd->kind == PNG)
+        {
             DRAW(gfillrect(_d, PNG_TRANS, xd->clip));
+            /* disable support for semi-transparency as alpha-blending
+               with this false colour does not work */
+            xd->have_alpha = FALSE;
+        }
         if (xd->kind == PNG)
             xd->pngtrans = ggetpixel(xd->gawin, pt(0, 0));
     }
@@ -2301,8 +2319,6 @@ static void GA_Close(pDevDesc dd)
         hide(xd->gawin);
 
         del(xd->bm);
-        if (xd->bm2)
-            del(xd->bm2);
         /* If this is the active device and buffered, shut updates off */
         if (xd == GA_xd)
             GA_xd = NULL;
@@ -2312,6 +2328,8 @@ static void GA_Close(pDevDesc dd)
         SaveAsBitmap(dd, xd->res_dpi);
     }
     del(xd->font);
+    if (xd->bm2)
+        del(xd->bm2);
     del(xd->gawin);
     /*
      * this is needed since the GraphApp delayed clean-up
@@ -2388,9 +2406,14 @@ static void GA_Deactivate(pDevDesc dd)
 
 #define DRAW2(col)                                                                                                     \
     {                                                                                                                  \
-        gcopyalpha(xd->bm, xd->bm2, r, R_ALPHA(col));                                                                  \
-        if (!xd->buffered)                                                                                             \
-            gbitblt(xd->gawin, xd->bm, pt(0, 0), getrect(xd->bm));                                                     \
+        if (xd->kind != SCREEN)                                                                                        \
+            gcopyalpha(xd->gawin, xd->bm2, r, R_ALPHA(col));                                                           \
+        else                                                                                                           \
+        {                                                                                                              \
+            gcopyalpha(xd->bm, xd->bm2, r, R_ALPHA(col));                                                              \
+            if (!xd->buffered)                                                                                         \
+                gbitblt(xd->gawin, xd->bm, pt(0, 0), getrect(xd->bm));                                                 \
+        }                                                                                                              \
     }
 
 /********************************************************/
@@ -2963,6 +2986,7 @@ static Rboolean GADeviceDriver(pDevDesc dd, const char *display, double width, d
     dd->startps = ps;
     dd->startlty = LTY_SOLID;
     dd->startgamma = gamma;
+    xd->bm = NULL;
     xd->bm2 = NULL;
     xd->have_alpha = FALSE; /* selectively overridden in GA_Open */
     xd->warn_trans = FALSE;
@@ -3139,7 +3163,7 @@ SEXP savePlot(SEXP args)
 
 /* Rbitmap  */
 #define BITMAP_DLL_NAME "\\library\\grDevices\\libs\\Rbitmap.dll"
-typedef int (*R_SaveAsBitmap)();
+typedef int (*R_SaveAsBitmap)(/* variable set of args */);
 static R_SaveAsBitmap R_SaveAsPng, R_SaveAsJpeg, R_SaveAsBmp;
 
 static int RbitmapAlreadyLoaded = 0;
@@ -3171,11 +3195,11 @@ static int Load_Rbitmap_Dll()
 
 static int png_rows = 0;
 
-static unsigned long privategetpixel2(void *d, int i, int j)
+static unsigned int privategetpixel2(void *d, int i, int j)
 {
     rgb c;
     c = ((rgb *)d)[i * png_rows + j];
-    return c;
+    return c & 0x00ffffff; /* exclude alpha channel */
 }
 
 /* This is the device version */
